--- a/src/sample/MenuItemEvent/GYBRJ/about.html
+++ b/src/sample/MenuItemEvent/GYBRJ/about.html
@@ -41,6 +41,8 @@
         <li>迷宫寻路-深度优先搜索</li>
         <li>迷宫寻路-广度优先搜索</li>
     </ol>
+    <p>代码地址：</p>
+    <a href="https://github.com/fanghuiX/JavaFXTest" >https://github.com/fanghuiX/JavaFXTest</a>
     <p>作者联系方式：fanghuiplus@163.com</p>
 </body>
 </html>
