--- a/src/sample/MenuItemEvent/SJGJS/sdgn.html
+++ b/src/sample/MenuItemEvent/SJGJS/sdgn.html
@@ -9,16 +9,16 @@
             padding-left: 10px;
             padding-right: 10px;
         }
-        #pres {
+        pre {
             font-size: 16px;
         }
     </style>
 </head>
 <body>
 <div id="div_container">
-<p>树的概念</p>
-<img src="../images/二叉树.jpg" />
-    <pre id="pres">
+    <p><strong>树的概念</strong></p>
+    <img src="../images/sdgn.PNG" />
+    <pre>
     树 （数据结构名词）
 
         树状图是一种数据结构，它是由n（n>=1）个有限结点组成一个具有层次关系
@@ -27,6 +27,7 @@
         每个结点有零个或多个子结点；没有父结点的结点称为根结点；每一个非根结
         点有且只有一个父结点；
         除了根结点外，每个子结点可以分为多个不相交的子树；
+
     定义
 
         树（tree）是包含n（n>=0）个结点的有穷集，其中：
@@ -47,6 +48,7 @@
         ..,nk为一组兄弟结点，它们都是结点n的子结点。
         我们还称T1,T2,..,Tk为结点n的子树。
         空集合也是树，称为空树。空树中没有结点。
+
     相关术语
 
         节点的度：一个节点含有的子树的个数称为该节点的度；
@@ -62,6 +64,7 @@
         节点的祖先：从根到该节点所经分支上的所有节点；
         子孙：以某节点为根的子树中任一节点都称为该节点的子孙。
         森林：由m（m>=0）棵互不相交的树的集合称为森林；
+
     种类
 
         无序树：树中任意节点的子结点之间没有顺序关系，这种树称为无序树,也称为自由
@@ -71,6 +74,7 @@
         完全二叉树
         满二叉树
         霍夫曼树：带权路径最短的二叉树称为哈夫曼树或最优二叉树；
+
     深度
 
         定义一棵树的根结点层次为1，其他节点的层次是其父结点层次加1。一棵树中所有
