修改B-/B+树界面

--- a/src/sample/BTREE/B+Tree.html
+++ b/src/sample/BTREE/B+Tree.html
@@ -55,7 +55,7 @@
 				<canvas id="canvas" width="1000" height="500"></canvas>
 
 				<div id="generalAnimationControlSection">
-					<!-- Table for buttons to control general animation (play/pause/undo/etc) ->
+					<!-- Table for buttons to control general animation (play/pause/undo/etc) -->
 					<!-- (filled in by javascript code, specifically AnimationMain.js)  -->
 					<table id="GeneralAnimationControls"></table>
 				</div>
