--- a/src/sample/BTREE/B-Tree.html
+++ b/src/sample/BTREE/B-Tree.html
@@ -56,9 +56,9 @@
 			  <canvas id="canvas" width="1000" height="500"></canvas>
 			  
 			 <div id="generalAnimationControlSection">
-			    <!-- Table for buttons to control general animation (play/pause/undo/etc) ->
+			    <!-- Table for buttons to control general animation (play/pause/undo/etc) -->
 				 <!-- (filled in by javascript code, specifically AnimationMain.js)  -->
-				 <table id="GeneralAnimationControls"><table>
+				 <table id="GeneralAnimationControls"></table>
 			  </div>
 			  
 			</div><!-- mainContent -->
