--- a/src/sample/MenuItemEvent/GYBRJ/about.html
+++ b/src/sample/MenuItemEvent/GYBRJ/about.html
@@ -41,6 +41,7 @@
         <li>迷宫寻路-深度优先搜索</li>
         <li>迷宫寻路-广度优先搜索</li>
     </ol>
+    <p>对于B-/B+树的实现，参考了David Galles（旧金山大学）网址是https://www.cs.usfca.edu/~galles/visualization/BPlusTree.html</p>
     <p>代码地址：</p>
     <a href="https://github.com/fanghuiX/JavaFXTest" >https://github.com/fanghuiX/JavaFXTest</a>
     <p>作者联系方式：fanghuiplus@163.com</p>
